Upgrade to Solr 8.x